style.css
body{
  margin: 0;
  padding: 0;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
}

img{
  border-radius: 90px;
  border: 5px solid black;
  margin: 5px;
}


button{
  padding: 5px;
  border-radius: 10px;
  background-color: rgb(185, 57, 115);
  color: rgb(238, 238, 238);
  height: 30px;
}

.maincat {
  width:300px;
}


.minicat{
  width: 150px;
  height: 150px;
}

.header{
  background-color: black;
  color: white;
  padding: 10px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-height: 20px;

}

a {
  text-decoration: none;
  color: grey;
  margin: 10px;
  font-size: 10px;
}

body{
  display: flex;
  flex-direction: column;
}

.section.one{
  background-color: black;
  color: white;
  display: flex;
  padding: 30px;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.subtext{
  color: grey;
}

.s1left{
  max-width: 400px;
}

.section.two{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 10px;
  align-items: center;
}

.cat{
  max-width: 150px;
}


.imagesanddescriptions{
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  gap: 100px;
  flex-wrap: wrap;
}

.section.three{
  background-color: rgb(215, 215, 215);
  color: grey;
  padding-left: 200px;
  padding-right: 200px;
  padding-top: 50px;
  padding-bottom: 50px;
  margin-top: 150px;
}

.advert{
  margin-top: 150px;
  margin-left: 20%;
  margin-right: 20%;
  margin-bottom: 50px;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  background-color: rgb(255, 172, 207);
  border-radius: 20px;
}

.footer{
  text-align: center;
  background-color: rgb(232, 232, 232);
}

